# tauri-proxyer

./: README.md  package.json  pnpm-lock.yaml
public/: proxyer.pac
src/: App.scss  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs
src-tauri/src/util/: download.rs
src/lib/: api.ts
