[package]
name = "tauri-proxyer"
version = "0.1.0"
description = "proxyer based on Tauri"
authors = ["hjy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
regex = "1"
dirs = "5"
reqwest = {version="0.11", default-features=false, features= ["json", "stream", "socks", "rustls-tls"] }
tokio= {version="1", features= ["fs", "macros"] }
tokio-util = {version="0.7", features= ["codec"] }
futures-util = "0.3"
thiserror="1"
lazy_static="1"
url="2"
percent-encoding="2"
log="0.4"
simplelog="0.12"
time= {version="0.3", features= ["formatting", "local-offset"] }
zip="0.6"

